# candle-gemma4

./: .gitignore  Cargo.toml  README.md  STATUS.md
examples/: inspect.rs
src/: downloader.rs  main.rs  quantized_gemma4.rs
